# TShell

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CppProperties.json  main.cpp  main.hpp
include/: app.hpp  console.hpp  rc.hpp  timer.hpp  util.hpp
src/: main.cpp  main.hpp
src/include/: app.hpp  console.hpp  gui.hpp  opengl.hpp  rectpack.hpp  sdl.hpp  textedit.hpp  timer.hpp  truetype.hpp  util.hpp
